syntax = "proto3";

package io.github.helloworlde.grpc;

option java_multiple_files = true;
option java_package = "io.github.helloworlde.grpc.proto";
option java_outer_classname = "UserInfoProto";

message UserInfoRequest {
  string name = 1;
}
message UserInfoResponse {
  int32 id = 1;
  string name = 2;
  int32 age = 3;
}

service UserInfoService {
  rpc GetUserInfo (UserInfoRequest) returns (UserInfoResponse){

  }
}

